digiKam 7.10.0 - Release date: 2023-xx-xx

*****************************************************************************************************
NEW FEATURES:


*****************************************************************************************************
BUGFIXES:

001 ==> 462598 - All groups disappeared after upgrade of Ubuntu and digiKam.
002 ==> 322642 - MAINTENANCE : tools an optimizations to maintain database schema.
003 ==> 462686 - Compile Error in videodecoder_p.cpp.
004 ==> 462685 - Darktable does not show in "open with" context menu.
005 ==> 462744 - Will digiKam run on Apple M1 or M2 chips?
006 ==> 462825 - Rename tool combobox history not saving in version 7.9.0.
007 ==> 462913 - Import Cancel button doesn't cancel during "Import > Add images...".
008 ==> 