@@ -14,4 +14,5 @@ BUGFIXES:
 005 ==> 462744 - Will digiKam run on Apple M1 or M2 chips?
 006 ==> 462825 - Rename tool combobox history not saving in version 7.9.0.
 007 ==> 462913 - Import Cancel button doesn't cancel during "Import > Add images...".
-008 ==> 
+008 ==> 463026 - Unable to reset custom collection collection icon.
+009 ==> 
